JumpScript/tests/baselines/reference/shorthandPropertyAssignmentInES6Module.errors.txt
tests/cases/compiler/test.jump(2,19): error TS2307: Cannot find module './missingModule'.


==== tests/cases/compiler/existingModule.jump (0 errors) ====
    export var x = 1;
    
==== tests/cases/compiler/test.jump (1 errors) ====
    import {x} from './existingModule';
    import {foo} from './missingModule';
                      ~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './missingModule'.
    
    declare function use(a: any): void;
    
    const test = { x, foo };
    
    use(x);
    use(foo);